fix overflow

--- a/src/scss/components/SettingsPage.scss
+++ b/src/scss/components/SettingsPage.scss
@@ -102,6 +102,9 @@
                 display: flex;
                 align-items: flex-start;
                 flex-basis: 100%;
+                .templateInfo{
+                    overflow: hidden;
+                }
                 .field{
                     overflow: hidden;
                     margin-bottom: 1rem;
